--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -151,6 +151,7 @@
   .form-actions button[type="submit"] {
     background-color: #7a3864;
     color: white;
+    gap: 10;
   }
   
   .cancel-btn {
