--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -46,7 +46,7 @@
 }
 
 .custom-add-customer-btn {
-  background-color: #4f46e5;
+  background-color: #9795c2;
   color: white;
   padding: 0.5rem 1rem;
   border: none;
@@ -113,7 +113,7 @@
 }
 
 .custom-action-btn.custom-edit {
-  color: #4f46e5;
+  color: #a2a0c9;
 }
 
 .custom-action-btn.custom-delete {
